# ckPayment

./: .gitignore  ACTIVITY.md  ARCHITECTURE_SEPARATION.md  CANISTER_FACTORY_GUIDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PATTERNS.md  DEVELOPMENT_QUICK_REFERENCE.md  FEATURE_DEVELOPMENT_GUIDE.md  FRONTEND_DEVELOPMENT_GUIDE.md  FRONTEND_TESTING_GUIDE.md  IMPLEMENTATION_ROADMAP.md  MERCHANT_BUSINESS_FEATURES.md  PROGRESS.md  QUICK_REFERENCE.md  README.md  STRIPE_INSPIRED_IMPLEMENTATION_PLAN.md  TESTING_GUIDE.md  TROUBLESHOOTING_GUIDE.md  add_controller.sh  build.sh  canister_ids.json  dfx.json  example-simple-sdk.html  icEth.sh  metrics.json  mops.toml  package-lock.json  package.json  preview.html  reii.sh  tailwind.config.ts  test-both-flows.html  test-sdk.html  upload_wasm.py  user_payment_small.wasm  user_payment_test.wasm  webpack.config.js  webpack.sdk.config.js  working-sdk-example.html
bundleSDK/: cdkPay.js  cdkPay.js.LICENSE.txt  cdkPay.js.map
ckPayment-web3/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
ckPayment-web3/public/: cdkPay.js  cdkPay.js.LICENSE.txt  cdkPay.js.map
ckPayment-web3/src/: App.tsx  index.css
ckPayment-web3/src/components/: AnimatedBackground.tsx  ComparisonSection.tsx  DemoEmbed.tsx  EnhancedCTASection.tsx  FAQSection.tsx  FinalCTASection.tsx  Footer.tsx  GameChangerSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  IntegrationSteps.tsx  LandingPage.tsx  Navbar.tsx  (+9 more)
ckbtc_ledger/: index.d.ts  index.js
icEth/: icEth.did.js  index.js
mockapp/: index.html
sdk/: ckPaysdk.js  ckPaysdk.js.map
src/SDK/: Pay.jsx  Subscription.jsx  auth.jsx  ckPay-enhanced.js  ckPay.js  index.css  interfaceHook.js  nonReactAuth.js  test-theming.html  userPaymentCanister.js
src/icEth/: Cargo.toml
src/payment_backend/: Cargo.toml  CkMinter.mo  build.rs  main.mo  payments.mo  types.mo  user_payment_canister.did  user_payment_canister.wasm  utils.mo
src/payment_backend/ckMinter/: ckMinter.public.did
src/payment_backend/src/: factory.rs  lib.rs  state.rs
src/payment_factory/: factory.mo  ic_management.mo  types.mo
src/user_payment_canister/: Cargo.toml  user_payment_canister.did
(+155 files in other folders)
