[package]
name = "icEth"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ethers-core = "2"
futures = "0.3"
ic-cdk = { workspace = true }
ic-cdk-macros = "0.8.1"
ic-stable-structures = { workspace = true }
serde = { workspace = true }
k256 = "0.13"
hex = "0.4"
getrandom = { version = "0.2", features = ["custom"] }
ic-metrics-encoder = "1.1.0"
serde_bytes = "0.11"
shared = { path = "../shared" }
